# link-curator-skill

./: .gitignore  LICENSE  QUICKSTART.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml
assets/: .env.example  requirements.txt
references/: mcp_setup.md
scripts/: __init__.py  check_env.py  env_helper.py  fetch_content.py  generate_cover.py  main.py  pipeline.py  publish_feishu.py  setup.py
scripts/fetchers/: __init__.py  jina_fetcher.py  web_fetcher.py  wechat_fetcher.py
